# chat-bot

./: .env.example  README.md  bot.py  pyproject.toml
storage/: docstore.json  index_store.json  vector_store.json
